--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <img src="https://iili.io/dSiMyg.png"><br>
 <title>ROBLOX CUSTOM FONT</title>
 <button><a href="mailto:dnewsdo@gmail.com">Send a request for text here.</a></button>
+  <br><button><a href="gallery.html">GALLERY</a></button>
 </html>
