--- a/gallery.html
+++ b/gallery.html
@@ -3,6 +3,7 @@
 <img src="https://docs.google.com/drawings/d/e/2PACX-1vQvcrTwd5X18EoOUatqYJhb-ZFLCFUtIG_3DTJitFqzSiLmwCEJdo9HZlddDxcMriTNlvnUzp-uxLlT/pub?w=1081&amp;h=706"><br>
 <img src="https://docs.google.com/drawings/d/e/2PACX-1vTP9XWpPQ-Tt6BVhLc7ul0ROlDe6y_tQZrznx4r7QV_D_Ee-CxIupm7a4jyarphoexkDEh4IMNR-G7g/pub?w=1081&amp;h=706"><br>
 <img src="https://docs.google.com/drawings/d/e/2PACX-1vSVAgrCrY4eE1BojI3wZSvMFCR0FMkTsL-z8qoLk1JVb2aYuxTWZv5gBLj81-60Wu1Kth4sX9co-AV6/pub?w=1264&amp;h=697"><br>
+<img src="https://docs.google.com/drawings/d/e/2PACX-1vRUQwLT6HqPwHqJVRnWm7pArLt2-p9ljVBARGUuez_MPFsR6HBRXF0edl5cbQNezXZs0uNk_pcP9Ggm/pub?w=540&amp;h=353"><br>
 <title>Gallery</title>
 <button><a href="/">BACK</a></button>
 </html>
