--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <img src="https://iili.io/dSiMyg.png"><br>
 <title>ROBLOX CUSTOM FONT</title>
 <button><a href="mailto:dnewsdo@gmail.com">Send a request for text here.</a></button>
-  <br><button><a href="gallery.html">GALLERY</a></button>
+  <br><button><a href="gallery.html">GALLERY</a></button><br>
+  <button><A href="1e2.html">INFINITY LOADER</a></button>
 </html>
