--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,7 @@
 <img src="https://docs.google.com/drawings/d/e/2PACX-1vSVAgrCrY4eE1BojI3wZSvMFCR0FMkTsL-z8qoLk1JVb2aYuxTWZv5gBLj81-60Wu1Kth4sX9co-AV6/pub?w=632&amp;h=348"><br>
 <img src="https://docs.google.com/drawings/d/e/2PACX-1vRUQwLT6HqPwHqJVRnWm7pArLt2-p9ljVBARGUuez_MPFsR6HBRXF0edl5cbQNezXZs0uNk_pcP9Ggm/pub?w=540&amp;h=353"><br>
 <img src="https://docs.google.com/drawings/d/e/2PACX-1vRiNaeYkIq80cs-OZOZ856pbA4f5CAI_OIdWEZ_rFexy213PMz3MWbB3fwWUT-4iyoSGobVAyBlU26r/pub?w=684&amp;h=364"><br>
+<img src="https://docs.google.com/drawings/d/e/2PACX-1vQj8J7ELUUWxLIkJkQEAISNUeVWiIoMW31A4WMx8nd_-MfCHNoRdw8s6n0rEiE_kqI49Y5Lf-GoeHfK/pub?w=540&amp;h=353"><br>
 <title>Gallery</title>
 <button><a href="/">BACK</a></button>
 </html>
