--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <!-- 1dev2 -->
+<link rel="icon" href="https://www.freepnglogos.com/uploads/roblox-logo/roblox-vector-iowntreese-deviantart-13.png">
 <img src="https://iili.io/dSiMyg.png"><br>
 <title>ROBLOX CUSTOM FONT</title>
 <button><a href="mailto:dnewsdo@gmail.com">Send a request for text here.</a></button>
