--- a/1e2.html
+++ b/1e2.html
@@ -1,4 +1,6 @@
 <html>
+
+<link rel="icon" href="https://www.freepnglogos.com/uploads/roblox-logo/roblox-vector-iowntreese-deviantart-13.png">
 <style>
 html, body {
   height: 100%;
