--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,7 @@
 <img src="https://docs.google.com/drawings/d/e/2PACX-1vRUQwLT6HqPwHqJVRnWm7pArLt2-p9ljVBARGUuez_MPFsR6HBRXF0edl5cbQNezXZs0uNk_pcP9Ggm/pub?w=540&amp;h=353"><br>
 <img src="https://docs.google.com/drawings/d/e/2PACX-1vRiNaeYkIq80cs-OZOZ856pbA4f5CAI_OIdWEZ_rFexy213PMz3MWbB3fwWUT-4iyoSGobVAyBlU26r/pub?w=684&amp;h=364"><br>
 <img src="https://docs.google.com/drawings/d/e/2PACX-1vQj8J7ELUUWxLIkJkQEAISNUeVWiIoMW31A4WMx8nd_-MfCHNoRdw8s6n0rEiE_kqI49Y5Lf-GoeHfK/pub?w=540&amp;h=353"><br>
+<img src="https://docs.google.com/drawings/d/e/2PACX-1vQPee_sT9dDk9D0wLWQvQfHJmgQDHsklLnEPiSvtckMzG4B3ulblEJLpFRj0xZr3ux-r-SMDz5oWrT2/pub?w=613&amp;h=365"><br>
 <title>Gallery</title>
 <button><a href="/">BACK</a></button>
 </html>
